<resources>
    <string name="app_name" translatable="false">Harano</string>
    <string name="search_hint" translatable="false">Search here</string>
    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>
    <string name="home">Home</string>
    <string name="backtohome">Go back Home</string>
    <string name="lostItem">Lost Item</string>
    <string name="foundItem">Found Item</string>
    <string name="addLostItem">Add Lost Item</string>
    <string name="addFoundItem">Add Found Item</string>
    <string name="QRcode">Apply For QR Code</string>
    <string name="drawer_open" translatable="false">drawer open</string>
    <string name="drawer_close" translatable="false">drawer close</string>
    <string name="english" translatable="false">English</string>
    <string name="bangla" translatable="false">বাংলা</string>

    <string name="formTitle">Fill up the Form</string>
    <string name="whatisit">What is it?</string>
    <string name="address">Address where you lost or found item</string>
    <string name="dateString">Date formate : mm/dd/yyyy</string>
    <string name="descString">Description (color,size,number,details)</string>
    <string name="addSubmitBtn">SUBMIT YOUR REQUEST</string>

    <string name="searchText">Find any lost and found item in here</string>
    <string name="search">Search Here</string>
    <string name="selectacat">Select Any one Category From Below</string>
    <string name="uploadImage">Click to Select 1 to 3 images </string>
    <string-array name="category_list">
        <item>Money</item>
        <item>People</item>
        <item>ID</item>
        <item>Passport</item>
        <item>Driving License</item>
        <item>Documents</item>
        <item>Money Bag</item>
        <item>Bag</item>
        <item>Pet</item>
        <item>Mobile</item>
        <item>Key</item>
        <item>Electronics</item>
        <item>Other</item>
    </string-array>


    <string name="qrTitle">QR Form for every Indivdual</string>
    <string name="qrSubtitle">Note:- QR code sticker only 10 taka, delivery charge 50tk, total 60 taka only, Sticker will be
dilivered to your House address. Delivery Area now Dhaka city, Chittagong City and Feni town.</string>

    <string name="catTitle">Category</string>
    <string name="phone">Phone</string>
    <string name="camera">Camera</string>
    <string name="laptop">Laptop</string>
    <string name="student_id">Student Id</string>
    <string name="office_id">Office Id</string>
    <string name="atm_card">Atm Card</string>
    <string name="national_id">National Id</string>
    <string name="money_bag">Moneybag</string>
    <string name="pasport">Passport</string>
    <string name="bag">Bag</string>
    <string name="cheque_bag">Cheque Book</string>
    <string name="house_door">House door</string>
    <string name="key_ring">Key Ring</string>
    <string name="book">Book</string>
    <string name="dairy">Dairy</string>
    <string name="document">Document File</string>
    <string name="facebook">Facebook</string>
    <string name="youtube">Youtube</string>
    <string name="wifi">WiFi</string>
    <string name="other">Other</string>

    <string name="select_Area">Select Area :</string>
    <string name="dhaka">Dhaka City</string>
    <string name="ctg">Chittagong City</string>
    <string name="feni">Feni City</string>

    <string name="fillUpAllTheInfo">Fill Up The Form</string>
    <string name="formName">Name</string>
    <string name="address2">address</string>
    <string name="email">email</string>
    <string name="model">model</string>
    <string name="office">office/ institution</string>
    <string name="networkName">SSID/Network Name</string>
    <string name="passwordNet">Network password</string>
    <string name="networkType">Network type-WPA-WPA@-WEP</string>
    <string name="url">URL</string>

    <string name="termsandcond">Terms And Conditions"</string>
    <string name="terms1stpara">Harano is the lost and found service app as a fee app. This service is provided by the Harano at no cost and intended for use as is. If you choose use our service, than you agree to the collection and use information that we collect is used for providing the service. For better experience while using our service we may require you to provide us with certain personal identifiable information as like name, contact, e-mail address, location, Photo.</string>
    <string name="terms2ndpara">Changes to this privacy policy</string>
    <string name="terms3rdpara">we may update our privacy policy for time to time, we will notify you of any changes by posting the new privacy policy on this page.
        </string>
    <string name="terms4thpara">Data</string>
    <string name="terms5thpara">Users data will always be secure .</string>
    <string name="terms6thpara">Advertising cookies</string>
    <string name="terms7thpara">we may use third parties, such as Google, to serve ads.</string>
    <string name="terms8thpara">If you have any question or suggestions about our privacy policy, Please contact us</string>

    <string name="getintouch">GET IN TOUCH</string>
    <string name="contactAdd">218 Elephant Road, Sahera Tropical Center, Laver 10, Room 1111, Dhaka</string>
    <string name="contactPhone">01316-753226</string>
</resources>

