<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"

    tools:context=".QRCodeForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baloo"
        android:textColor="@color/colorBrand3"
        android:text="@string/qrTitle"
        android:textSize="25sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baloo"
        android:textColor="@color/ash"
        android:text="@string/qrSubtitle"
        android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo"
            android:textColor="@color/colorBrand3"
            android:text="@string/catTitle"
            android:textSize="15sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


      <RadioGroup
          android:id="@+id/radioGroup"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"

          >
      <RadioButton
          android:id="@+id/phone"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/phone"
          android:onClick="onRadioButtonClicked"
          />
          <RadioButton
              android:id="@+id/camera"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/camera"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/laptop"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/laptop"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/student_id"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/student_id"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/officeId"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/office_id"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/atm_card"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/atm_card"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/nid"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/national_id"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/money_bag"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/money_bag"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/passport"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/pasport"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/bag"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/bag"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/cheque_book"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/cheque_bag"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/house_door"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/house_door"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/key_ring"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/key_ring"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/book"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/book"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/dairy"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dairy"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/document_file"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/document"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/facebook"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/facebook"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/youtube"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/youtube"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/wifi"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/wifi"
              android:onClick="onRadioButtonClicked"
              />
          <RadioButton
              android:id="@+id/othersId"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/other"
              android:onClick="onRadioButtonClicked"
              />



      </RadioGroup>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/selectArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:fontFamily="@font/baloo"
            android:textColor="@color/colorBrand3"
            android:text="@string/select_Area"
            android:textSize="15sp" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                android:id="@+id/dhaka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dhaka"
                android:onClick="onItemClicked"
                />
            <RadioButton
                android:id="@+id/ctg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ctg"
                android:onClick="onItemClicked"
                />
            <RadioButton
                android:id="@+id/feni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feni"
                android:onClick="onItemClicked"
                />
        </RadioGroup>
        <TextView
            android:id="@+id/msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />
        <Button
            android:id="@+id/btn"
            android:layout_gravity="center"
            android:layout_marginTop="250dp"
            android:layout_width="260dp"
            android:text="Next"
            android:textColor="@color/white"
            android:background="@drawable/home_btn"
            android:layout_height="50dp"/>
        </LinearLayout>


    </LinearLayout>

        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            />
    </LinearLayout>
</ScrollView>