<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".TermsandConditionClass">

    <TextView
        android:id="@+id/terms1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/termsandcond"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorBrand3"
        android:fontFamily="@font/anonymous_pro_bold"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/terms2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anonymous_pro_bold"
        android:text="@string/terms1stpara"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/terms3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms2ndpara"
        android:textStyle="bold"
        android:fontFamily="@font/anonymous_pro_bold"
        android:textColor="@color/colorBrand3"
        android:textSize="17sp"/>
    <TextView
        android:id="@+id/terms4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms3rdpara"
        android:fontFamily="@font/anonymous_pro_bold"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/terms5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms4thpara"
        android:textStyle="bold"
        android:fontFamily="@font/anonymous_pro_bold"
        android:textColor="@color/colorBrand3"
        android:textSize="17sp"/>
    <TextView
        android:id="@+id/terms6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms5thpara"
        android:fontFamily="@font/anonymous_pro_bold"
        android:layout_marginBottom="10dp"
        android:textSize="17sp"
        />
    <TextView
        android:id="@+id/terms7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms6thpara"
        android:textStyle="bold"
        android:fontFamily="@font/anonymous_pro_bold"
        android:textColor="@color/colorBrand3"
        android:textSize="17sp"/>
    <TextView
        android:id="@+id/terms8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms7thpara"
        android:fontFamily="@font/anonymous_pro_bold"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/terms9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms8thpara"
        android:fontFamily="@font/anonymous_pro_bold"
        android:layout_marginBottom="10dp"
        android:textSize="17sp"
        />

    <Button

        android:id="@+id/homeBtn"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:background="@drawable/botton_shape"
        android:text="back"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:layout_gravity="center"/>

</LinearLayout>