<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".contactus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical"
        android:background="@color/lightBlue"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <TextView
            android:id="@+id/contact1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getintouch"
            android:textColor="@color/colorBrand3"
            android:textStyle="bold"
            android:fontFamily="@font/baloo"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:textSize="30sp"
            />
    </LinearLayout>

     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/ic_home_black_24dp"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         />
    <TextView
        android:id="@+id/contact2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/contactAdd"
        android:textColor="#FF9800"
        android:fontFamily="@font/anonymous_pro_bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_local_phone_black_24dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/contact3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/anonymous_pro_bold"
        android:gravity="center"
        android:text="@string/contactPhone"
        android:textColor="#FF9800"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/login"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/anonymous_pro_bold"
        android:gravity="center"
        android:text="Motiurrahamanjewel@gmail.com"
        android:textColor="#FF9800"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>