<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".AddItem">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formTitle"
        android:gravity="center"
        android:fontFamily="@font/aclonica"
        android:textSize="20sp"
        android:textColor="@color/colorBrand2"

        />
    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Create an Account"
        android:textColor="@color/red"
        android:layout_gravity="center"
        android:visibility="invisible"

        />
    <TextView
        android:id="@+id/selectone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectacat"
        android:textColor="@color/colorBrand2"
        android:layout_gravity="center"
         android:textSize="20sp"
        android:fontFamily="@font/baloo"
        />
    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"

        android:background="@drawable/editbox"

        />

    <LinearLayout
        android:id="@+id/Checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">
        <CheckBox android:id="@+id/men"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Men"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Women"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/kid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kid"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/old_men_or_women"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Old"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/CheckboxIDType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible">
        <CheckBox android:id="@+id/nid"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="NID"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/studentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student ID"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/officeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Office id "
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/othersId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OthersID"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>

    <EditText
        android:id="@+id/what"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/whatisit"
        android:textColor="#000"
        android:fontFamily="@font/anonymous_pro"
        android:layout_marginTop="10dp"
        android:inputType="text"
       android:textColorHint="#000"
        android:background="@drawable/editbox"
        />
    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="#000"
        android:padding="10dp"
        android:hint=" Address where you lost/found item"
        android:inputType="text"
        android:fontFamily="@font/anonymous_pro"
        android:layout_marginTop="10dp"
        android:textColorHint="#000"
        android:background="@drawable/editbox"
        />
    <EditText
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:hint=" Date Formate:dd/mm/yyyy"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="datetime"
        android:fontFamily="@font/anonymous_pro"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:textColorHint="#000"
        android:background="@drawable/editbox"
        />
    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="15dp"
        android:layout_gravity="center"

        android:hint=" Description(color,size,number details)"

        android:fontFamily="@font/anonymous_pro"
        android:textColor="#000"
        android:gravity="top"
        android:maxLength="200"
        android:layout_marginTop="5dp"
        android:textColorHint="#000"
        android:background="@drawable/editbox"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:id="@+id/imgTxt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/uploadImage"
            android:textColor="@color/ash"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:fontFamily="@font/baloo"
            android:clickable="false"

            />

        <ImageButton
            android:id="@+id/chooseImg"
            android:layout_width="70dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:background="@drawable/ic_insert_photo_black_24dp"

            />
    </LinearLayout>


    <Button
        android:id="@+id/submitbtn"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@drawable/home_btn"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/baloo"
        android:layout_marginTop="20dp"
        android:text="Submit your request"
         />


</LinearLayout>